Release 0.1b
--------------------------------------------------------------------------------
================================================================================
 T O D O S
================================================================================
* Draw Arduino Layout in Fritzing
* Implement Arduino Sketch that understands and executes the Droplet Message Format (DMF)
* Implement Java Service that speaks DMF

* Implement Basic UI with the following functionality:
	- Open/Close Valves for water release
	- Simple Logging of photo number combined with the current configuration

* Add Tests to the most important services and util methods
* Fix UI Layout Issues
* Split marshaling of device configs for memory performance on microcontrollers


================================================================================
 I D E A S
================================================================================
* Create Custom L&F with Synth or Nimbus
* Only fire association changed event if object was added/removed?
* Set Description and Color per Device
* Mark Device Type with Icons
* Sensors
	- Sensor Setup Panel
	- SensorAction starts when sensor fires (with offset and/or duration)
* Open/Close Panels
* Move logging to own window?
* Tabbed View (Setup, Shooting, Finish/Clean)
* Only send data if something changed since last send
* Setup Flashes without valves
* Empty valves (all, single, combination)
* Processing:
	o embed Comments, Tags to EXIF
	o embed the setup information in some kind of 'code' to EXIF
	o watch folder / distribution folder
	  example workflow: Camera -> watch folder -> Droplet -> distribution folder -> Lightroom
* Logging:
	o log comments, times, setup, ... per session into file
* Graphical View of one cycle
* Automatic Action Times:
	o Offset + Duration = min. Offset of the following Action
* Viscosity Factor:
	o Factor that adapts the action times of devices
* How to handle different raw formats in aspect of EXIF ???