@@ -3,7 +3,7 @@ Droplet Serial Communication Protocol
 ================================================================================
 Title:		Release Notes
 Version:	0.1b
-Date:		2012/02/04
+Date:		2012/02/07
 Author:		Stefan Brenner
 --------------------------------------------------------------------------------
 
